--- a/client/public/index.html
+++ b/client/public/index.html
@@ -32,6 +32,8 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Fanwood+Text&family=Poppins:wght@100;500&family=Press+Start+2P&family=Roboto:ital,wght@0,100;0,300;0,400;1,100;1,300&family=Tiro+Gurmukhi:ital@0;1&display=swap" rel="stylesheet">
 
+<link href="https://fonts.googleapis.com/css2?family=Fanwood+Text&family=Poppins:ital,wght@0,100;0,500;1,900&family=Press+Start+2P&family=Roboto:ital,wght@0,100;0,300;0,400;1,100;1,300&family=Tiro+Gurmukhi:ital@0;1&display=swap" rel="stylesheet">
+
 <!-- ICON -->
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <!-- REACT-QUILL BUNDLE -->
